force-app/main/default/objects/Case/fields/LPCR_AmplitudeHoraireMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireMardi__c</fullName>
    <label>Amplitude horaire mardi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Après-midi</fullName>
            </value>
            <value>
                <fullName>Journée entière</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>