force-app/main/default/objects/Case/fields/LPCR_AmplitudeHoraireMercredi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireMercredi1__c</fullName>
    <label>Amplitude horaire mercredi Enfant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Après-midi</fullName>
            </value>
            <value>
                <fullName>Journée entière</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>