force-app/main/default/objects/Case/fields/LPCR_ANaitre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ANaitre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A naitre</label>
    <type>Checkbox</type>
</CustomField>