force-app/main/default/objects/Case/fields/LPCR_ChoixN1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChoixN1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choix de crèche N°1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>Demandes_Reseau_Grandir</relationshipName>
    <type>Lookup</type>
</CustomField>