force-app/main/default/objects/Case/fields/LPCR_ChoixN3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChoixN3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choix de crèche N°3</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Veuillez sélectionner un compte crèche ou crèche externe.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Creche_Externe</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>Demandes_Reseau_Grandir3</relationshipName>
    <type>Lookup</type>
</CustomField>