force-app/main/default/objects/Case/fields/LPCR_CodePostalDomicile__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostalDomicile__c</fullName>
    <label>Code postal du domicile</label>
    <length>10</length>
    <type>Text</type>
</CustomField>