force-app/main/default/objects/Case/fields/LPCR_CodePostalTravail__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostalTravail__c</fullName>
    <label>Code postal du travail</label>
    <length>10</length>
    <type>Text</type>
</CustomField>