force-app/main/default/objects/Case/fields/LPCR_ContratEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Entreprise</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>Demandes_Reseau_Grandir</relationshipName>
    <type>Lookup</type>
</CustomField>