force-app/main/default/objects/Case/fields/LPCR_DateEntreeSouhaitee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeSouhaitee__c</fullName>
    <label>Date d&apos;entrée souhaitée</label>
    <type>Date</type>
</CustomField>