force-app/main/default/objects/Case/fields/LPCR_DateNaissance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance__c</fullName>
    <formula>IF(NOT(ISBLANK(LPCR_Enfant__c)),LPCR_Enfant__r.Birthdate, Lead__r.LPCR_DateNaissance1__c )</formula>
    <label>Date de naissance ou terme</label>
    <type>Date</type>
</CustomField>