force-app/main/default/objects/Case/fields/LPCR_DateVisite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateVisite__c</fullName>
    <label>Date de visite</label>
    <type>Date</type>
</CustomField>