force-app/main/default/objects/Case/fields/LPCR_Departement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Departement__c</fullName>
    <formula>LEFT(LPCR_CodePostalDomicile__c,2)</formula>
    <label>Département</label>
    <type>Text</type>
</CustomField>