force-app/main/default/objects/Case/fields/LPCR_DevisReservataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DevisReservataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis Réservataire</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>DemandesReseauGrandir</relationshipName>
    <type>Lookup</type>
</CustomField>