force-app/main/default/objects/Case/fields/LPCR_Enfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Enfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enfant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>Demandes_RG_Enfant</relationshipName>
    <type>Lookup</type>
</CustomField>