force-app/main/default/objects/Case/fields/LPCR_Lead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Veuillez renseigner un lead ou un contact enfant</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DemandeRG</relationshipLabel>
    <relationshipName>DemandeRG</relationshipName>
    <type>Lookup</type>
</CustomField>