force-app/main/default/objects/Case/fields/LPCR_MotifSansSuite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifSansSuite__c</fullName>
    <label>Motif du sans suite</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulation famille</fullName>
            </value>
            <value>
                <fullName>Pas de solution réseau</fullName>
            </value>
            <value>
                <fullName>Retour LPCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>