force-app/main/default/objects/Case/fields/LPCR_MoyenTransport__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MoyenTransport__c</fullName>
    <label>Moyen de transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A pied</fullName>
            </value>
            <value>
                <fullName>Transports en commun</fullName>
            </value>
            <value>
                <fullName>Voiture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>