force-app/main/default/objects/Case/fields/LPCR_NombreJoursSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursSemaine__c</fullName>
    <description>Nombre de jours par semaine effectué par l&apos;enfant. Champ utilisé dans le flow de création du bon d&apos;achat partenaire</description>
    <formula>CASE(TEXT(LPCR_AmplitudeHoraireLundi__c),&apos;Journée entière&apos;,1,&apos;Matin&apos;,0.5,&apos;Après-midi&apos;,0.5,0)
+CASE(TEXT(LPCR_AmplitudeHoraireMardi__c),&apos;Journée entière&apos;,1,&apos;Matin&apos;,0.5,&apos;Après-midi&apos;,0.5,0)
+CASE(TEXT(LPCR_AmplitudeHoraireMercredi__c),&apos;Journée entière&apos;,1,&apos;Matin&apos;,0.5,&apos;Après-midi&apos;,0.5,0)
+CASE(TEXT(LPCR_AmplitudeHoraireJeudi__c),&apos;Journée entière&apos;,1,&apos;Matin&apos;,0.5,&apos;Après-midi&apos;,0.5,0)
+CASE(TEXT(LPCR_AmplitudeHoraireVendredi__c),&apos;Journée entière&apos;,1,&apos;Matin&apos;,0.5,&apos;Après-midi&apos;,0.5,0)</formula>
    <inlineHelpText>Nombre de jours par semaine effectué par l&apos;enfant</inlineHelpText>
    <label>Nombre de jours par semaine</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>