force-app/main/default/objects/Case/fields/LPCR_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir</relationshipLabel>
    <relationshipName>DemandesRG</relationshipName>
    <type>Lookup</type>
</CustomField>