force-app/main/default/objects/Case/fields/LPCR_Preinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Preinscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Préinscription</label>
    <referenceTo>LPCR_Preinscription__c</referenceTo>
    <relationshipLabel>Demandes</relationshipLabel>
    <relationshipName>Demandes</relationshipName>
    <type>Lookup</type>
</CustomField>