force-app/main/default/objects/Case/fields/LPCR_RepresentantN1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RepresentantN1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Représentant N°1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandes Réseau Grandir (Représentant 1)</relationshipLabel>
    <relationshipName>Demandes_RG_Representant1</relationshipName>
    <type>Lookup</type>
</CustomField>