force-app/main/default/objects/Case/fields/LPCR_RepresentantN2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RepresentantN2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Représentant N°2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandes (Représentant 2)</relationshipLabel>
    <relationshipName>Demandes_RG_Representant2</relationshipName>
    <type>Lookup</type>
</CustomField>