force-app/main/default/objects/Case/fields/LPCR_RueDomicile__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RueDomicile__c</fullName>
    <label>Rue du domicile</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>