force-app/main/default/objects/Case/fields/LPCR_RueTravail__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RueTravail__c</fullName>
    <label>Rue du travail</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>