force-app/main/default/objects/Case/fields/LPCR_VilleDomicile__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VilleDomicile__c</fullName>
    <label>Ville du domicile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>