force-app/main/default/objects/Case/fields/LPCR_VilleTravail__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VilleTravail__c</fullName>
    <label>Ville du travail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>