force-app/main/default/objects/Case/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DemandeRG</relationshipLabel>
    <relationshipName>DemandeRG</relationshipName>
    <type>Lookup</type>
</CustomField>