force-app/main/default/objects/Case/validationRules/Case_VR_Motif_sans_suite.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_VR_Motif_sans_suite</fullName>
    <active>true</active>
    <description>Motif sans suite obligatoire lorsque la demande est classée Sans suite</description>
    <errorConditionFormula>AND(NOT($Permission.LPCR_ByPass_VR),
ISPICKVAL(Status,&apos;Sans suite&apos;),
ISBLANK(TEXT(LPCR_MotifSansSuite__c)))</errorConditionFormula>
    <errorDisplayField>LPCR_MotifSansSuite__c</errorDisplayField>
    <errorMessage>Veuillez préciser le motif du sans suite</errorMessage>
</ValidationRule>